Add dotenv dependency to package.json

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "compile-run": "^2.3.4",
     "connect-mongo": "^5.1.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5"
     "eclipse-md": "file:",
     "express": "^5.1.0",
     "ffmpeg": "^0.0.4",
